k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infra-platform
  labels:
    name: infra-platform
