k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: infra-platform-svc
  namespace: infra-platform
  labels:
    app: infra-platform
spec:
  type: ClusterIP
  selector:
    app: infra-platform
  ports:
    - name: http
      port: 80
      targetPort: http
